languages/CNNArchLang/src/test/resources/valid_tests/RNNencdec.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture RNNencdec {
    def input Z(0:29999)^{30} source
    def output Z(0:29999)^{1} target[30]

    layer GRU(units=1000) encoder;

    source ->
    Embedding(output_dim=500) ->
    encoder;

    1 -> target[0];

    layer GRU(units=1000) decoder;

    encoder.state -> decoder.state;

    timed<t> BeamSearch(max_length=30, width=3) {
        target[t-1] ->
        Embedding(output_dim=500) ->
        decoder ->
        FullyConnected(units=30000) ->
        ArgMax() ->
        target[t]
    };
}
